--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### IntelliJ IDEA ###
+**/.idea/**
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
@@ -13,6 +14,7 @@ rmi/.idea/*
 .springBeans
 .sts4-cache
 bin/
+**/build/**
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
